--- a/index.html
+++ b/index.html
@@ -4941,7 +4941,7 @@ body[data-form-submit="regular"] .container-wrap input[type=submit]{
                                         <script type="text/javascript"></script>
                                         <div class='gf_browser_unknown gform_wrapper gform_legacy_markup_wrapper' id='gform_wrapper_1' style='display:none'>
                                             <div id='gf_1' class='gform_anchor' tabindex='-1'></div>
-                                            <form method='post' enctype='multipart/form-data' target='gform_ajax_frame_1' id='gform_1' action='https://www.residences400central.com/#gf_1'>
+                                            <form method='post' enctype='multipart/form-data' target='gform_ajax_frame_1' id='gform_1' action='#gf_1'>
                                                 <input type='hidden' class='gforms-pum' value='{"closepopup":false,"closedelay":0,"openpopup":false,"openpopup_id":0}' />
                                                 <div class='gform_body gform-body'>
 
@@ -5010,7 +5010,7 @@ body[data-form-submit="regular"] .container-wrap input[type=submit]{
                                                 </div>
                                             </form>
 
-                                            <form method='post' enctype='multipart/form-data' target='gform_ajax_frame_1' id='gform_2' hidden action='https://www.residences400central.com/#gf_1'>
+                                            <form method='post' enctype='multipart/form-data' target='gform_ajax_frame_1' id='gform_2' hidden action='#gf_1'>
                                                 <input type='hidden' class='gforms-pum' value='{"closepopup":false,"closedelay":0,"openpopup":false,"openpopup_id":0}' />
                                                 <div class='gform_body gform-body'>
 
@@ -5048,7 +5048,7 @@ body[data-form-submit="regular"] .container-wrap input[type=submit]{
                                                 </div>
                                             </form>
 
-                                            <form method='post' enctype='multipart/form-data' target='gform_ajax_frame_1' id='gform_3' hidden action='https://www.residences400central.com/#gf_1'>
+                                            <form method='post' enctype='multipart/form-data' target='gform_ajax_frame_1' id='gform_3' hidden action='#gf_1'>
                                                 <input type='hidden' class='gforms-pum' value='{"closepopup":false,"closedelay":0,"openpopup":false,"openpopup_id":0}' />
                                                 <div class='gform_body gform-body'>
                                                     <p align="center">An error occured please contact <a style="color:blue;" mailto="residences400central@gmail.com">residences400central@gmail.com</a> to end your inquire process.<br>Thanks !!! 
