--- a/amenities/index.html
+++ b/amenities/index.html
@@ -1403,7 +1403,7 @@ transform: scale(1.3);
 			 <div id="search-box">
 				 <div class="inner-wrap">
 					 <div class="col span_12">
-						  <form role="search" action="https://www.residences400central.com/" method="GET">
+						  <form role="search" action="" method="GET">
 														 <input type="text" name="s"  value="" aria-label="Search" placeholder="Search" />
 							 
 						<span>Hit enter to search or ESC to close</span>
@@ -2555,7 +2555,7 @@ justify-content:center;
 		<div class="vc_column-inner" >
 			<div class="wpb_wrapper">
 				<script type="text/javascript"></script>
-                <div class='gf_browser_unknown gform_wrapper gform_legacy_markup_wrapper' id='gform_wrapper_1' style='display:none'><div id='gf_1' class='gform_anchor' tabindex='-1'></div><form method='post' enctype='multipart/form-data' target='gform_ajax_frame_1' id='gform_1'  action='https://www.residences400central.com/amenities/#gf_1' > 
+                <div class='gf_browser_unknown gform_wrapper gform_legacy_markup_wrapper' id='gform_wrapper_1' style='display:none'><div id='gf_1' class='gform_anchor' tabindex='-1'></div><form method='post' enctype='multipart/form-data' target='gform_ajax_frame_1' id='gform_1'  action='#gf_1' > 
  <input type='hidden' class='gforms-pum' value='{"closepopup":false,"closedelay":0,"openpopup":false,"openpopup_id":0}' />
                         <div class='gform_body gform-body'><ul id='gform_fields_1' class='gform_fields top_label form_sublabel_below description_below'><li id="field_1_2" class="gfield gf_left_third gfield_contains_required field_sublabel_below field_description_below gfield_visibility_visible" ><label class='gfield_label' for='input_1_2' >First Name<span class="gfield_required"><span class="gfield_required gfield_required_asterisk">*</span></span></label><div class='ginput_container ginput_container_text'><input name='input_2' id='input_1_2' type='text' value='' class='medium'    placeholder='First Name' aria-required="true" aria-invalid="false"   /> </div></li><li id="field_1_3" class="gfield gf_middle_third gfield_contains_required field_sublabel_below field_description_below gfield_visibility_visible" ><label class='gfield_label' for='input_1_3' >Last Name<span class="gfield_required"><span class="gfield_required gfield_required_asterisk">*</span></span></label><div class='ginput_container ginput_container_text'><input name='input_3' id='input_1_3' type='text' value='' class='medium'    placeholder='Last Name' aria-required="true" aria-invalid="false"   /> </div></li><li id="field_1_5" class="gfield gf_right_third gfield_contains_required field_sublabel_below field_description_below gfield_visibility_visible" ><label class='gfield_label' for='input_1_5' >Email Address<span class="gfield_required"><span class="gfield_required gfield_required_asterisk">*</span></span></label><div class='ginput_container ginput_container_email'>
                             <input name='input_5' id='input_1_5' type='text' value='' class='medium'   placeholder='Your Email' aria-required="true" aria-invalid="false"  />
